--- a/package.json
+++ b/package.json
@@ -8,27 +8,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.0.0-beta.3",
-    "@fullcalendar/daygrid": "^6.0.0-beta.3",
-    "@fullcalendar/interaction": "^6.0.0-beta.3",
-    "@fullcalendar/react": "^6.0.0-beta.3",
-    "@fullcalendar/timegrid": "^6.0.0-beta.3",
-    "@markwhen/parser": "^0.9.1",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/multimonth": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
+    "@markwhen/parser": "^0.9.3",
     "@markwhen/view-client": "^1.4.0",
-    "immer": "^9.0.16",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.1.5"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.1",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3",
+    "vite": "^4.4.9",
     "vite-plugin-singlefile": "^0.13.3"
   },
   "files": [
