--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port=5175",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && cp _headers dist/_headers",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,7 +14,7 @@
     "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
-    "@markwhen/parser": "^0.12.0-beta.4",
+    "@markwhen/parser": "^0.12.0",
     "@markwhen/view-client": "^1.5.0-beta.1",
     "immer": "^10.1.1",
     "react": "^18.3.1",
