--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@markwhen/calendar",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "type": "module",
   "scripts": {
     "dev": "vite --port=5175",
@@ -14,24 +14,24 @@
     "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
-    "@markwhen/parser": "^0.12.0",
-    "@markwhen/view-client": "^1.5.0-beta.1",
+    "@markwhen/parser": "^0.13.5",
+    "@markwhen/view-client": "^1.5.2",
     "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/luxon": "^3.3.1",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.6.2",
-    "vite": "^5.4.8",
-    "vite-plugin-singlefile": "^2.0.2"
+    "vite": "^6.2.3",
+    "vite-plugin-singlefile": "^2.2.0"
   },
   "files": [
     "dist/index.html"
