--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.5",
   "type": "module",
   "scripts": {
-    "dev": "vite --port=5175",
+    "dev": "vite",
     "build": "tsc && vite build && cp _headers dist/_headers",
     "preview": "vite preview"
   },
